--- a/app.css
+++ b/app.css
@@ -1,3 +1,17 @@
 body{
     margin:0;
 }
+
+.center-me
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+#canvas
+{
+    border :1px solid red;
+    height:500px;
+    width:500px;
+}
